# MySecureCommunication-Project

./: README.md
Desktop/demo/: .gitignore  CMakeLists.txt  INSTALL_COMPILER.md  INSTALL_OPENSSL.md  PROJECT_SUMMARY.md  QUICK_FIX.md  README.md  build.bat  build.sh  build_fixed.bat  build_simple.sh  build_vs.bat  build_with_openssl.bat  demo_project.bat  demo_project.py  quick_build.bat  simple_build.bat  test_compiler.bat  test_demo.py  test_installation.sh
Desktop/demo/client/: client.cpp  gui_client.cpp  gui_client.h  gui_client.ui  gui_client_win.cpp
Desktop/demo/crypto/: crypto_utils.cpp  crypto_utils.h
Desktop/demo/include/: common.h
Desktop/demo/server/: server.cpp
